# Proyecto_SCTR

./: CMakeLists.txt  README.md
include/: alerts.h  buzzer.h  fsm_control.h  hcsr04.h  led.h  logica_distancia.h  parking_logic.h
scr/: hcsr04.c  logica_distancia.c  main.c
src/: alerts.c  bucle_principal  bucle_principal.c  buzzer.c  fsm_control.c  hcsr04.c  led.c  logica_distancia.c  main.c  parking_logic.c
src(Antiguo)/: hcsr04.c  led.c
src(Antiguo-ignorar)/: main.c
